--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,8 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "throw Error": "Выкинуть ошибку",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Короткий язык": "Ru",
+  "Главная": "Главная",
+  "О проекте": "О проекте"
 }
