add modal, portal, change NavBar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,6 @@
   "Переключить": "Toggle",
   "Короткий язык": "En",
   "Главная": "Main Page",
-  "О проекте": "About us"
+  "О проекте": "About us",
+  "Войти": "Login"
 }
