--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
   "Главная": "Главная",
-  "О проекте": "О проекте"
+  "О проекте": "О проекте",
+  "Войти": "Войти"
 }
