add feature AuthByUsername, add custom Input, add stories

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
   "Короткий язык": "En",
   "Главная": "Main Page",
   "О проекте": "About us",
-  "Войти": "Login"
+  "Войти": "Login",
+  "Введите имя": "Enter name",
+  "Введите пароль": "Enter password"
 }
