--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,7 @@
   "Короткий язык": "Ru",
   "Главная": "Главная",
   "О проекте": "О проекте",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Введите имя": "Введите имя",
+  "Введите пароль": "Введите пароль"
 }
