--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,6 +10,9 @@
   "Главная": "Главная",
   "О проекте": "О проекте",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Введите имя": "Введите имя",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
 }
