--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,6 @@
   "Введите имя": "Enter name",
   "Введите пароль": "Enter password",
   "Форма авторизации": "Authorization form",
-  "Вы ввели неверный логин или пароль": "You entered an incorrect username or password"
+  "Вы ввели неверный логин или пароль": "You entered an incorrect username or password",
+  "Профиль": "Profile"
 }
