--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -14,5 +14,6 @@
   "Введите имя": "Введите имя",
   "Введите пароль": "Введите пароль",
   "Форма авторизации": "Форма авторизации",
-  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+  "Профиль": "Профиль"
 }
